--- a/bjs/07_Number_and_string/index.html
+++ b/bjs/07_Number_and_string/index.html
@@ -20,13 +20,32 @@
                             <div class="col">
                                 <button class="btn btn-outline-danger form-control" id="btn_clr">C</button>
                             </div>
+                        </div> 
+                        <div class="row no-gutters">
+                            <div class="col">
+                                <button class="btn btn-outline-primary form-control" id="btn_1">1</button>
+                            </div>
+
                         </div>
-                    </div>
+                            
+                            <div class="row no-gutters">
+                                <div class="col">
+                                    <button class="btn btn-outline-primary form-control" id="btn_sum">+</button>
+                                </div>
+                                <div class="col">
+                                    <button class="btn btn-outline-primary form-control" id="btn_def">-</button>
+                                </div>
+                            
+                                <div class="col">
+                                    <button class="btn btn-outline-primary form-control" id="btn_calc">=</button>
+                                </div>
+                            </div>
+                          </div>
                 </div>
-            </div>
         </div>
     </div>
 </div>
 <script src="script.js"></script>
+</div>
 </body>
 </html>
